--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "express": "^4.17.1",
+    "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-favicon": "0.0.18",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
